--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -19,9 +19,9 @@
             </tr>
         </tbody>
     </table>
-    <button type="submit" [disabled]="!movieForm.valid">Add Movie</button>
+    <button type="submit" class="btn btn-primary" [disabled]="!movieForm.valid">Add Movie</button>
 </form>
-<button type="button" *ngIf="!addMovieToggle" (click)="toggleForm()">Add Movie</button>
+<button type="button"  class="btn btn-primary" *ngIf="!addMovieToggle" (click)="toggleForm()">Add Movie</button>
 
   <div *ngFor="let movie of movieList" class="card">
     <h1>{{movie.name}}</h1>
