--- a/src/app/movie/movie.component.css
+++ b/src/app/movie/movie.component.css
@@ -1,10 +1,9 @@
-.card {
+/* .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 80%;
     margin: auto;
     text-align: center;
     font-family: arial;
-    /* display: flex; */
   flex-wrap: wrap;
   }
   
@@ -23,4 +22,4 @@
     cursor: pointer;
     width: 100%;
     font-size: 18px;
-  }
+  } */
