--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -2,31 +2,48 @@
     <table>
         <tbody>
             <tr>
-                <td><p>Movie Name: </p></td>
+                <td>
+                    <p>Movie Name: </p>
+                </td>
                 <td><input type="text" id="name" formControlName="name"></td>
             </tr>
             <tr>
-                <td><p>Language: </p></td>
+                <td>
+                    <p>Language: </p>
+                </td>
                 <td><input type="text" id="lang" formControlName="lang"></td>
             </tr>
             <tr>
-                <td><p>Year: </p></td>
+                <td>
+                    <p>Year: </p>
+                </td>
                 <td><input type="number" id="year" formControlName="year"></td>
             </tr>
             <tr>
-                <td><p>Price: </p></td>
+                <td>
+                    <p>Price: </p>
+                </td>
                 <td><input type="number" id="price" formControlName="price"></td>
             </tr>
         </tbody>
     </table>
     <button type="submit" class="btn btn-primary" [disabled]="!movieForm.valid">Add Movie</button>
 </form>
-<button type="button"  class="btn btn-primary" *ngIf="!addMovieToggle" (click)="toggleForm()">Add Movie</button>
+<button type="button" class="btn btn-primary" *ngIf="!addMovieToggle" (click)="toggleForm()">Add Movie</button>
 
-  <div *ngFor="let movie of movieList" class="card">
-    <h1>{{movie.name}}</h1>
-    <p>{{movie.lang}}</p>
-    <p class="price">{{movie.price | currency:'INR'}}</p>
-    <p>{{movie.year}}</p>
-    <p><button>Book Ticket</button></p>
-  </div>
+<div class="row justify-content-md gap-3">
+
+
+    <div *ngFor="let movie of movieList" class="card col-lg-5 ">
+        <div class="card-header">
+            <h5 class="card-title">{{movie.name}}</h5>
+        </div>
+        <div class="card-body">
+            <p class="card-text">{{movie.lang}}</p>
+            <p class="card-text">{{movie.price | currency:'INR'}}</p>
+            <p class="card-text">{{movie.year}}</p>
+            <p><button class="btn btn-primary">Book Ticket</button></p>
+
+        </div>
+    </div>
+</div>
