--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,37 +1,5 @@
-<form [formGroup]="movieForm" (ngSubmit)="addMovie()" *ngIf="addMovieToggle">
-    <table>
-        <tbody>
-            <tr>
-                <td>
-                    <p>Movie Name: </p>
-                </td>
-                <td><input type="text" id="name" formControlName="name"></td>
-            </tr>
-            <tr>
-                <td>
-                    <p>Language: </p>
-                </td>
-                <td><input type="text" id="lang" formControlName="lang"></td>
-            </tr>
-            <tr>
-                <td>
-                    <p>Year: </p>
-                </td>
-                <td><input type="number" id="year" formControlName="year"></td>
-            </tr>
-            <tr>
-                <td>
-                    <p>Price: </p>
-                </td>
-                <td><input type="number" id="price" formControlName="price"></td>
-            </tr>
-        </tbody>
-    </table>
-    <button type="submit" class="btn btn-primary" [disabled]="!movieForm.valid">Add Movie</button>
-</form>
-<button type="button" class="btn btn-primary" *ngIf="!addMovieToggle" (click)="toggleForm()">Add Movie</button>
 
-<div class="row justify-content-md gap-3">
+<div class="row justify-content-md-center gap-3">
 
 
     <div *ngFor="let movie of movieList" class="card col-lg-5 ">
